--- a/src1/index.html
+++ b/src1/index.html
@@ -144,8 +144,11 @@
     <p><i class="fas fa-mobile-alt"></i>
       <strong><a href="tel:18889874368"><span class="contact" itemprop="telephone">1-888-9-URGENT</span></a></strong>
     </p>
+    <p><i class="fas fa-mobile-alt"></i>
+      <strong><a href="tel:17609949400"><span class="contact" itemprop="telephone">760-994-9400</span></a></strong>
+    </p>
 	<p><i class="far fa-comment-dots"></i>
-      <strong><a href="sms:18889874368"><span class="contact" itemprop="telephone">1-888-9-URGENT</span></a></strong>
+      <strong><a href="sms:17609949400"><span class="contact" itemprop="telephone">760-994-9400</span></a></strong>
     </p>
 	<p><a href="https://www.facebook.com/urgentcarebumperrepair/" target="_blank"><i class="fab fa-facebook-square"></i></a><span style="margin-right:1.25em;"></span><a href="https://www.yelp.com/biz/urgent-care-bumper-repair-oceanside" target="_blank"><i class="fab fa-yelp"></i></a></p>
 	</div>
