--- a/src1/index.html
+++ b/src1/index.html
@@ -79,7 +79,7 @@
       </div>
 
       <!--img src="https://source.unsplash.com/1600x900/?nature,water" alt=""-->
-      <div class="caption" style="background-image:linear-gradient(rgba(256, 256, 256, 0.78), rgba(256, 256, 256, 0.78)),url(assets/images/services/background.jpg); background-size:cover; height:500px;">
+      <div class="caption" style="background-image:linear-gradient(rgba(256, 256, 256, 0.78), rgba(256, 256, 256, 0.78)),url('assets/images/services/background.jpg'); background-size:cover; height:500px;">
 	  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 		  <div class="carousel-inner">
 			<div class="carousel-item active mt-5">
