--- a/src1/index.html
+++ b/src1/index.html
@@ -150,7 +150,10 @@
 	<p><i class="far fa-comment-dots"></i>
       <strong><a href="sms:17609949400"><span class="contact" itemprop="telephone">760-994-9400</span></a></strong>
     </p>
-	<p><a href="https://www.facebook.com/urgentcarebumperrepair/" target="_blank"><i class="fab fa-facebook-square"></i></a><span style="margin-right:1.25em;"></span><a href="https://www.yelp.com/biz/urgent-care-bumper-repair-oceanside" target="_blank"><i class="fab fa-yelp"></i></a></p>
+	<p><a href="https://www.facebook.com/urgentcarebumperrepair/" target="_blank"><i class="fab fa-facebook-square"></i></a><span style="margin-right:1.25em;"></span>
+	   <a href="https://www.yelp.com/biz/urgent-care-bumper-repair-oceanside" target="_blank"><i class="fab fa-yelp"></i></a><span style="margin-right:1.25em;"></span>
+	   <a href="https://g.co/kgs/3WXYdw" target="_blank"><i class="fab fa-google"></i></i></a>
+	</p>
 	</div>
   </footer>
 
