--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <base href="/urgentcarebumperrepair">  <meta charset="utf-8">
+  <base href="https://upspackageman.github.io/urgentcarebumperrepair/">  <meta charset="utf-8">
   <title>Urgentcarebumperrepair</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="styles.3d086d398b798072cf61.css"></head>
+</head>
 <body>
   <app-root></app-root>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.8bdfc2bea04b7eb5bdee.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
