--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <base href="/src3">  
+  <base href="/urgentcarebumperrepair/">  
   <meta charset="utf-8">
   <title>Urgentcarebumperrepair</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
